--- a/index.html
+++ b/index.html
@@ -8,28 +8,29 @@
 </head>
 <body>
     <header class="cabecalho"> 
-        <img class="cabecalho-imagem" src="logoana.png" alt="logo da loja">
+        <img class="cabecalho-imagem" src="download.png" alt="logo da loja">
         <img src="" alt="">
-        <ul class="cabecalho-lista">
-         <li class="cabecalho-lista-item">curso</li>
-        <li class="cabecalho-lista-item">sobre nós</li>
+        <h2 class="cabecalho-logo">facudade formiguinha</h2>
+        <ul class="cabecalho">
+           
+         <li class="cabecalho">cursos</li>
+        <li class="cabecalho">sobre nós</li>
+        <li class="cabecalho">acesso</li>
          </ul>
     </header>
 <section class="loja">
-<h2 class="itenspalavra">categorias</h2>
+<h2 class="itenspalavra-1">categorias</h2>
 <p class="itenspalavra">tecnologia</p>
 <p class="itenspalavra">educação</p>
 <p class="itenspalavra">saude</p>
 <p class="itenspalavra">finanças</p>
 <p class="itenspalavra">case studies</p>
 </section>
-<section class="tenis-1lista">
+<section class="lista-foto">
  
-    <img src="images.jpeg" alt="">
-    <img src="download.jpeg" alt="">
+    <img src="imagemmenino.jpeg" alt="">
     <img src="images (2).jpeg" alt="">
-    <img src="images (6).jpeg" alt="">
-    <img src="images (3).jpeg" alt="">
+  <img src="images.jpeg" alt="">
 </section>
 </body>
 </html>
